@startuml ARCH06_MLD
!pragma layout smetana
skinparam shadowing false
skinparam defaultFontSize 11
skinparam backgroundColor white
skinparam ArrowColor #333333
skinparam ArrowThickness 1
skinparam Padding 5
skinparam entity {
  BackgroundColor white
  BorderColor #666666
  HeaderBackgroundColor #EEEEEE
  HeaderFontColor #333333
}
skinparam note {
  BackgroundColor #FFFFEE
  BorderColor #AAAAAA
}

title ARCH06 - Modele Logique des Donnees (MLD)\nSchema app - PostgreSQL 15

' ══════════════════════════════════════════════
' REFERENTIELS
' ══════════════════════════════════════════════
entity "app.imfs" as IMF {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  nom : VARCHAR(200) NOT NULL
  code : VARCHAR(20) UNIQUE NOT NULL
  pays : VARCHAR(50) DEFAULT 'CM'
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.agences" as AGENCE {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #imf_id : UUID FK -> imfs NOT NULL
  nom : VARCHAR(200) NOT NULL
  adresse : VARCHAR(500)
  actif : BOOLEAN DEFAULT TRUE
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.users" as USER {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #imf_id : UUID FK -> imfs NOT NULL
  #agence_id : UUID FK -> agences
  email : VARCHAR(255) UNIQUE NOT NULL
  nom_complet : VARCHAR(200) NOT NULL
  role : VARCHAR(30) NOT NULL
  ' CHECK: DIRECTEUR, ANALYSTE, AGENT, DSI, AGENT_SAISIE, SUPER_ADMIN
  fcm_token : VARCHAR(500)
  actif : BOOLEAN DEFAULT TRUE
  last_login : TIMESTAMP
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.otp_codes" as OTP {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #user_id : UUID FK -> users NOT NULL
  code_hash : VARCHAR(255) NOT NULL
  expires_at : TIMESTAMP NOT NULL
  tentatives : INTEGER DEFAULT 0
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.refresh_tokens" as RTOKEN {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #user_id : UUID FK -> users NOT NULL
  token_hash : VARCHAR(255) UNIQUE NOT NULL
  expires_at : TIMESTAMP NOT NULL
  created_at : TIMESTAMP DEFAULT NOW()
}

' ══════════════════════════════════════════════
' CLIENTS
' ══════════════════════════════════════════════
entity "app.client_informels" as CLIENT {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #agence_id : UUID FK -> agences NOT NULL
  nom : VARCHAR(200) NOT NULL
  prenom : VARCHAR(200)
  telephone : VARCHAR(20) UNIQUE
  secteur_activite : VARCHAR(100)
  date_adhesion : DATE
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.kyc_dossiers" as KYC {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #client_id : UUID FK -> client_informels NOT NULL UNIQUE
  statut : VARCHAR(30) NOT NULL
  ' CHECK: EN_ATTENTE, DOCUMENTS_SOUMIS, APPROUVE, REJETE
  date_verification : TIMESTAMP
  agent_verif_id : UUID FK -> users
}

' ══════════════════════════════════════════════
' CREDIT
' ══════════════════════════════════════════════
entity "app.dossiers_credit" as DOSSIER {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #client_id : UUID FK -> client_informels NOT NULL
  #agent_id : UUID FK -> users NOT NULL
  montant_demande : NUMERIC(15,2) NOT NULL
  duree_mois : INTEGER NOT NULL
  objet_financement : VARCHAR(500)
  statut : VARCHAR(30) NOT NULL
  ' CHECK: INSTRUCTION, EN_COMITE, APPROUVE, REJETE, AJOURNE, DEBLOQUE
  date_decision : TIMESTAMP
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.contrats_credit" as CONTRAT {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #dossier_id : UUID FK -> dossiers_credit UNIQUE NOT NULL
  reference_contrat : VARCHAR(50) UNIQUE NOT NULL
  montant_final : NUMERIC(15,2) NOT NULL
  taux_interet : NUMERIC(5,2) NOT NULL
  nb_echeances : INTEGER NOT NULL
  periodicite : VARCHAR(20) NOT NULL
  ' CHECK: MENSUEL, BIMENSUEL, TRIMESTRIEL
  statut : VARCHAR(30) NOT NULL
  ' CHECK: BROUILLON, SOUMIS, VALIDE, ACTIF, REJETE
  signatures_conformes : BOOLEAN DEFAULT FALSE
  created_at : TIMESTAMP DEFAULT NOW()
}

' ══════════════════════════════════════════════
' RECOUVREMENT
' ══════════════════════════════════════════════
entity "app.creances" as CREANCE {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #contrat_id : UUID FK -> contrats_credit UNIQUE NOT NULL
  #client_id : UUID FK -> client_informels NOT NULL
  montant_total : NUMERIC(15,2) NOT NULL
  montant_rembourse : NUMERIC(15,2) DEFAULT 0
  jours_retard : INTEGER DEFAULT 0
  statut : VARCHAR(30) NOT NULL
  ' CHECK: ACTIF, EN_RETARD, EN_RECOUVREMENT, SOLDE, PERTE
  classe_cobac : CHAR(1)
  ' CHECK: A, B, C, D, E
  date_modification : TIMESTAMP DEFAULT NOW()
}

entity "app.collectes_terrain" as COLLECTE {
  <u>uid</u> : UUID PK
  ' UUID genere cote client Flutter (UUID.v4())
  ==
  #client_id : UUID FK -> client_informels NOT NULL
  #agent_id : UUID FK -> users NOT NULL
  #creance_id : UUID FK -> creances
  montant_collecte : NUMERIC(15,2) NOT NULL
  date_collecte : DATE NOT NULL
  canal : VARCHAR(30) NOT NULL
  ' CHECK: MTN_MOBILE_MONEY, ORANGE_MONEY, ESPECES, VIREMENT
  reference_transaction : VARCHAR(100)
  statut : VARCHAR(20) NOT NULL
  ' CHECK: SOUMISE, CONFIRMEE, REJETEE
  synchronise : BOOLEAN DEFAULT TRUE
  date_soumission : TIMESTAMP DEFAULT NOW()
}

entity "app.alertes_impayes" as ALERTE {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #creance_id : UUID FK -> creances NOT NULL
  jours_retard : INTEGER NOT NULL
  montant_en_retard : NUMERIC(15,2) NOT NULL
  statut_alerte : VARCHAR(20) NOT NULL
  ' CHECK: ACTIVE, ESCALADEE, CLOTUREE
  type_alerte : VARCHAR(50)
  ' CHECK: RISQUE_DEFAUT_IMMINENT, DETERIORATION_RAPIDE,
  '        BAISSE_COLLECTE_PERSISTANTE, ECHEANCE_IMMINENTE
  sse_sent : BOOLEAN DEFAULT FALSE
  email_sent : BOOLEAN DEFAULT FALSE
  fcm_sent : BOOLEAN DEFAULT FALSE
  date_cloture : TIMESTAMP
  created_at : TIMESTAMP DEFAULT NOW()
  CONSTRAINT uq_alerte_creance_active\nUNIQUE (creance_id, statut_alerte)
  ' (une seule alerte ACTIVE par creance)
}

entity "app.plans_apurement" as PLAN {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #creance_id : UUID FK -> creances NOT NULL
  montant_accorde : NUMERIC(15,2) NOT NULL
  nombre_echeances : INTEGER NOT NULL
  statut : VARCHAR(20) NOT NULL
  created_at : TIMESTAMP DEFAULT NOW()
}

entity "app.notifications" as NOTIF {
  <u>uid</u> : UUID PK DEFAULT gen_random_uuid()
  ==
  #user_id : UUID FK -> users NOT NULL
  type : VARCHAR(50) NOT NULL
  titre : VARCHAR(200) NOT NULL
  corps : TEXT
  lu : BOOLEAN DEFAULT FALSE
  created_at : TIMESTAMP DEFAULT NOW()
}

' ══════════════════════════════════════════════
' CARDINALITES
' ══════════════════════════════════════════════
IMF    ||--o{ AGENCE  : "possede (1,N)"
IMF    ||--o{ USER    : "emploie (1,N)"
AGENCE ||--o{ USER    : "rattache (1,N)"
AGENCE ||--o{ CLIENT  : "gere (1,N)"

USER |o--o{ COLLECTE  : "effectue (0,N)"
USER |o--o{ DOSSIER   : "instruit (0,N)"
USER |o--o{ NOTIF     : "recoit (0,N)"

CLIENT ||--o{ DOSSIER  : "souscrit (1,N)"
CLIENT ||--o{ COLLECTE : "verse (1,N)"
CLIENT |o--o| KYC      : "verifie (0,1)"

DOSSIER ||--o| CONTRAT : "genere (0,1)"
CONTRAT ||--o| CREANCE : "produit (0,1)"

CREANCE ||--o{ COLLECTE : "alimente (1,N)"
CREANCE ||--o{ ALERTE   : "declenche (1,N)"
CREANCE |o--o{ PLAN     : "restructure (0,N)"

note bottom of COLLECTE
  uid genere cote Flutter (UUID.v4())
  Deduplication par contrainte PRIMARY KEY
  Supporte le mode offline-first
end note

@enduml
